--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1325,7 +1325,7 @@ ul li{
   }
 
   .produk-container img {
-    margin-top: -100px;
+    /* margin-top: -100px; */
     margin-left: -10px;
   }
 
